Fix about-me page collapse layout - remove invalid p tags

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -386,12 +386,12 @@ button.btn.btn-primary {
 
 .job_history{
   border-radius: 0px;
-  background-color: #F1E0DD;
+  background-color: #e0e0e0ff;
 }
 
 .education {
   border-radius: 0px;
-  background-color: #DDF1EA;
+  background-color: #c9dad4ff;
 }
 
 
